<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgraund" />

    <LinearLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cont2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/info_author_top" />

            <TextView
                android:id="@+id/txt_info_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/info_author" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_click_true_or_false"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:paddingRight="100dp"
                android:paddingLeft="100dp"
                android:layout_marginTop="80dp"
                android:text="@string/btn_back" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>